
Huffman Построение дерева
|     Method |     Mean |    Error |  StdDev |      Gen0 |      Gen1 |      Gen2 | Allocated |
|----------- |---------:|---------:|--------:|----------:|----------:|----------:|----------:|
|   Compress | 228.4 ms | 10.37 ms | 0.57 ms |  333.3333 |  333.3333 |  333.3333 |  33.32 MB |
| Uncompress | 309.2 ms | 12.00 ms | 0.66 ms | 1000.0000 | 1000.0000 | 1000.0000 |  33.79 MB |

DCT1D
|     Method |     Mean |    Error |  StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|--------:|---------:|---------:|---------:|----------:|
|   Compress | 125.6 ms |  4.76 ms | 0.26 ms | 500.0000 | 500.0000 | 500.0000 |  33.32 MB |
| Uncompress | 163.4 ms | 21.05 ms | 1.15 ms | 500.0000 | 500.0000 | 500.0000 |  33.79 MB |

Matrix Unsafe
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 52.56 ms | 2.339 ms | 0.128 ms | 800.0000 | 800.0000 | 800.0000 |  33.32 MB |
| Uncompress | 72.38 ms | 4.032 ms | 0.221 ms | 714.2857 | 714.2857 | 714.2857 |  33.79 MB |

Упрощеный Pixel, Массив вместо List 
|     Method |     Mean |     Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|----------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 45.92 ms | 31.613 ms | 1.733 ms | 727.2727 | 727.2727 | 727.2727 |  26.83 MB |
| Uncompress | 68.69 ms |  1.795 ms | 0.098 ms | 714.2857 | 714.2857 | 714.2857 |  29.79 MB |

Плоские массивы и Span
|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
|   Compress | 38.49 ms | 2.129 ms | 0.117 ms | 785.7143 | 785.7143 | 785.7143 |  26.83 MB |
| Uncompress | 62.28 ms | 2.357 ms | 0.129 ms | 750.0000 | 750.0000 | 750.0000 |  29.79 MB |

