@@ -47,4 +47,8 @@ Matrix Unsafe
 |   Compress | 38.49 ms | 2.129 ms | 0.117 ms | 785.7143 | 785.7143 | 785.7143 |  26.83 MB |
 | Uncompress | 62.28 ms | 2.357 ms | 0.129 ms | 750.0000 | 750.0000 | 750.0000 |  29.79 MB |
 
-
+Инлайнинг DCT1D, Заранее подсчитать Scale, Плоский Cosine
+|     Method |     Mean |    Error |   StdDev |     Gen0 |     Gen1 |     Gen2 | Allocated |
+|----------- |---------:|---------:|---------:|---------:|---------:|---------:|----------:|
+|   Compress | 26.44 ms | 2.101 ms | 0.115 ms | 906.2500 | 906.2500 | 906.2500 |  26.83 MB |
+| Uncompress | 50.25 ms | 0.543 ms | 0.030 ms | 800.0000 | 800.0000 | 800.0000 |  29.79 MB |
